FEAT(Book-Chapter): added feature and ability to remove object from s3 storage.
